# advent_of_code

./: .gitignore
2023/: .gitignore  benchmark.py  compile_all.sh  run_all.sh
2023/day1/: Makefile  part1.c  part2.c
2023/day10/cmd/part1/: part1.go
2023/day10/cmd/part2/: part2.go
2023/day10/internal/util/: util.go
2023/day11/: mix.exs  part1.exs  part2.exs
2023/day11/lib/: Part1.ex  Part2.ex
2023/day12/: part1.exs  part2.exs
2023/day12/lib/: part1.ex  part2.ex
2023/day13/: mix.exs  part1.exs  part2.exs
2023/day13/lib/: part1.ex  part2.ex
2023/day14/: mix.exs  part2.exs
2023/day14/lib/: part1.ex  part2.ex
2023/day15/: mix.exs  part1.exs
2023/day15/lib/: part1.ex  part2.ex
2023/day16/: day16.cabal
2023/day16/src/: Main.hs  Parse.hs  Part1.hs  Part2.hs  Solve.hs
2023/day17/: day17.cabal
2023/day17/src/: Parse.hs  Part1.hs  Part2.hs  Solve.hs
2023/day18/: day18.cabal
2023/day18/src/: Parse.hs  Part1.hs  Part2.hs  Solve.hs
2023/day19/: day17.cabal  day19.cabal
2023/day19/src/: Parse.hs  Part1.hs  Part2.hs  Solve.hs
2023/day2/: part1.c  part2.c
2023/day20/: day20.cabal
2023/day20/src/: Parse.hs  Part1.hs  Solve.hs
2023/day3/: Makefile  part1.c  part2.c
2023/day4/: Makefile  part1.c  part2.c
2023/day5/: Makefile  part1.c  part2.c
2023/day6/cmd/part1/: part1.go
2023/day6/cmd/part2/: part2.go
2023/day6/internal/util/: util.go
2023/day7/cmd/part1/: part1.go
2023/day7/cmd/part2/: part2.go
2023/day7/internal/util/: util.go
2023/day8/cmd/part1/: main.go
2023/day8/cmd/part2/: part2.go
2023/day9/cmd/part1/: part1.go
2023/day9/cmd/part2/: part2.go
