cabal-version:      2.4
name:               day16
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

author:             Simon Lizotte
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Solve, Parse

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable part1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Parse, Solve

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        day16,
        containers

    hs-source-dirs:   src
    default-language: Haskell2010
