cabal-version:      2.4
name:               day17
version:            0.1.0.0

author:             Simon Lizotte
extra-source-files: CHANGELOG.md

executable part1
    main-is:          Part1.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Parse, Solve

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        containers,
        matrix,
        PSQueue,

    hs-source-dirs:   src
    default-language: Haskell2010


executable part2
    main-is:          Part2.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Parse, Solve

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        containers,
        matrix,
        PSQueue,

    hs-source-dirs:   src
    default-language: Haskell2010
