cabal-version:      3.0
name:               day20
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable part1
    import:           warnings
    main-is:          Part1.hs
    other-modules:    Parse, Solve
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      containers,
    hs-source-dirs:   src
    default-language: Haskell2010
